# embedded-layout

./: Cargo.toml
examples/: centered_text.rs  custom_view.rs  dynamic_layout.rs  element_spacing.rs  linear_layout.rs  linear_layout_custom_view_group.rs  nested_layout.rs  nested_layout_macro.rs
src/: align.rs  component.rs  lib.rs  padding.rs
src/align/: mod.rs
src/align/horizontal/: mod.rs
src/align/vertical/: mod.rs
src/layout/: mod.rs
src/layout/linear/: mod.rs  orientation.rs  spacing.rs
